--- a/public/style.css
+++ b/public/style.css
@@ -607,16 +607,17 @@ video {
   margin-right: 0 auto;
 }
 
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
 .mb-6 {
   margin-bottom: 1.5rem;
 }
 
 .mr-3 {
   margin-right: 0.75rem;
-}
-
-.mt-14 {
-  margin-top: 3.5rem;
 }
 
 .mt-56 {
@@ -655,6 +656,18 @@ video {
   height: auto;
 }
 
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
 .w-20 {
   width: 5rem;
 }
@@ -671,12 +684,72 @@ video {
   width: 375px;
 }
 
+.w-\[510px\] {
+  width: 510px;
+}
+
 .w-full {
   width: 100%;
 }
 
-.w-\[510px\] {
-  width: 510px;
+.w-auto {
+  width: auto;
+}
+
+.w-2\/5 {
+  width: 40%;
+}
+
+.w-2\/4 {
+  width: 50%;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.w-\[1280px\] {
+  width: 1280px;
+}
+
+.w-\[1340px\] {
+  width: 1340px;
+}
+
+.w-\[2000px\] {
+  width: 2000px;
+}
+
+.w-\[1500px\] {
+  width: 1500px;
+}
+
+.w-\[1600px\] {
+  width: 1600px;
+}
+
+.w-\[1800px\] {
+  width: 1800px;
+}
+
+.w-\[1700px\] {
+  width: 1700px;
+}
+
+.w-\[1650px\] {
+  width: 1650px;
+}
+
+.w-\[1750px\] {
+  width: 1750px;
+}
+
+.w-\[1780px\] {
+  width: 1780px;
 }
 
 .max-w-3xl {
@@ -687,12 +760,20 @@ video {
   max-width: 16rem;
 }
 
+.max-w-7xl {
+  max-width: 80rem;
+}
+
 .max-w-\[380px\] {
   max-width: 380px;
 }
 
 .max-w-\[434px\] {
   max-width: 434px;
+}
+
+.max-w-\[440px\] {
+  max-width: 440px;
 }
 
 .max-w-\[464px\] {
@@ -711,44 +792,12 @@ video {
   max-width: 620px;
 }
 
-.max-w-sm {
-  max-width: 24rem;
-}
-
 .max-w-lg {
   max-width: 32rem;
 }
 
-.max-w-7xl {
-  max-width: 80rem;
-}
-
-.max-w-\[360px\] {
-  max-width: 360px;
-}
-
-.max-w-\[990px\] {
-  max-width: 990px;
-}
-
-.max-w-\[366px\] {
-  max-width: 366px;
-}
-
-.max-w-\[400px\] {
-  max-width: 400px;
-}
-
-.max-w-\[450px\] {
-  max-width: 450px;
-}
-
-.max-w-\[440px\] {
-  max-width: 440px;
-}
-
-.flex-shrink-0 {
-  flex-shrink: 0;
+.max-w-\[1700px\] {
+  max-width: 1700px;
 }
 
 .cursor-pointer {
@@ -761,20 +810,16 @@ video {
           appearance: none;
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
 .flex-col {
   flex-direction: column;
 }
 
 .flex-col-reverse {
   flex-direction: column-reverse;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
-}
-
-.items-start {
-  align-items: flex-start;
 }
 
 .items-center {
@@ -785,6 +830,10 @@ video {
   justify-content: space-between;
 }
 
+.gap-0 {
+  gap: 0px;
+}
+
 .gap-14 {
   gap: 3.5rem;
 }
@@ -793,20 +842,12 @@ video {
   gap: 1rem;
 }
 
-.gap-64 {
-  gap: 16rem;
-}
-
-.gap-\[260px\] {
-  gap: 260px;
-}
-
 .gap-5 {
   gap: 1.25rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .rounded-\[20px\] {
@@ -817,32 +858,32 @@ video {
   border-radius: 55px;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
 
-.rounded-3xl {
-  border-radius: 1.5rem;
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .border {
   border-width: 1px;
 }
 
-.border-4 {
-  border-width: 4px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
+.border-\[1\.4px\] {
+  border-width: 1.4px;
 }
 
 .border-b-2 {
   border-bottom-width: 2px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
 }
 
 .border-none {
@@ -852,15 +893,6 @@ video {
 .border-\[\#458ff6\] {
   --tw-border-opacity: 1;
   border-color: rgb(69 143 246 / var(--tw-border-opacity));
-}
-
-.border-teal-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(20 184 166 / var(--tw-border-opacity));
-}
-
-.border-transparent {
-  border-color: transparent;
 }
 
 .border-white {
@@ -883,25 +915,21 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-teal-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(20 184 166 / var(--tw-bg-opacity));
-}
-
 .bg-transparent {
   background-color: transparent;
 }
 
-.bg-\[linear-gradient\(180deg\2c _\#0f1026_29\%\2c _\#1b2040_100\%\)\] {
-  background-image: linear-gradient(180deg, #0f1026 29%, #1b2040 100%);
-}
-
-.bg-\[linear-gradient\(223deg\2c _\#6888c8_0\%\2c _\#5a98f2_100\%\)\] {
-  background-image: linear-gradient(223deg, #6888c8 0%, #5a98f2 100%);
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .bg-\[linear-gradient\(212deg\2c _\#6888c8_0\%\2c _\#5a98f2_100\%\)\] {
   background-image: linear-gradient(212deg, #6888c8 0%, #5a98f2 100%);
+}
+
+.bg-\[linear-gradient\(223deg\2c _\#6888c8_0\%\2c _\#5a98f2_100\%\)\] {
+  background-image: linear-gradient(223deg, #6888c8 0%, #5a98f2 100%);
 }
 
 .p-14 {
@@ -912,19 +940,9 @@ video {
   padding: 1.75rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-5 {
@@ -932,14 +950,9 @@ video {
   padding-right: 1.25rem;
 }
 
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-4 {
@@ -947,13 +960,32 @@ video {
   padding-bottom: 1rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.px-11 {
+  padding-left: 2.75rem;
+  padding-right: 2.75rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .pb-12 {
   padding-bottom: 3rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
 }
 
 .pb-28 {
@@ -962,6 +994,10 @@ video {
 
 .pb-36 {
   padding-bottom: 9rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pb-5 {
@@ -1020,6 +1056,10 @@ video {
   padding-top: 100px;
 }
 
+.pt-\[120px\] {
+  padding-top: 120px;
+}
+
 .pt-\[50px\] {
   padding-top: 50px;
 }
@@ -1028,56 +1068,40 @@ video {
   padding-top: 70px;
 }
 
-.pt-\[90\] {
-  padding-top: 90;
-}
-
 .pt-\[90px\] {
   padding-top: 90px;
 }
 
-.pb-24 {
-  padding-bottom: 6rem;
+.pl-20 {
+  padding-left: 5rem;
 }
 
-.pb-14 {
-  padding-bottom: 3.5rem;
+.pl-10 {
+  padding-left: 2.5rem;
 }
 
-.pb-56 {
-  padding-bottom: 14rem;
-}
-
-.pt-56 {
-  padding-top: 14rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
-.pt-\[120px\] {
-  padding-top: 120px;
+.pl-0 {
+  padding-left: 0px;
 }
 
 .pl-36 {
   padding-left: 9rem;
 }
 
-.text-left {
-  text-align: left;
+.pb-7 {
+  padding-bottom: 1.75rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pt-7 {
+  padding-top: 1.75rem;
 }
 
 .text-center {
   text-align: center;
-}
-
-.text-right {
-  text-align: right;
-}
-
-.text-justify {
-  text-align: justify;
 }
 
 .font-body {
@@ -1120,11 +1144,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1150,12 +1169,24 @@ video {
   line-height: 124%;
 }
 
+.leading-\[133\%\] {
+  line-height: 133%;
+}
+
 .leading-\[142\%\] {
   line-height: 142%;
 }
 
+.leading-\[150\%\] {
+  line-height: 150%;
+}
+
 .leading-\[175\%\] {
   line-height: 175%;
+}
+
+.leading-\[210\%\] {
+  line-height: 210%;
 }
 
 .leading-\[233\%\] {
@@ -1166,28 +1197,12 @@ video {
   line-height: 290%;
 }
 
-.leading-\[316\%\] {
-  line-height: 316%;
-}
-
-.leading-tight {
-  line-height: 1.25;
-}
-
-.leading-\[150\%\] {
-  line-height: 150%;
-}
-
-.leading-\[133\%\] {
-  line-height: 133%;
-}
-
 .leading-\[300\%\] {
   line-height: 300%;
 }
 
-.leading-\[210\%\] {
-  line-height: 210%;
+.leading-\[316\%\] {
+  line-height: 316%;
 }
 
 .tracking-\[\.02em\] {
@@ -1243,22 +1258,7 @@ video {
   color: rgb(167 167 167 / var(--tw-text-opacity));
 }
 
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.text-teal-500 {
-  --tw-text-opacity: 1;
-  color: rgb(20 184 166 / var(--tw-text-opacity));
-}
-
 .text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\#fff\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -1285,20 +1285,9 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-\[rgba\(0\2c _0\2c _0\2c _0\.25\)_0px_4px_4px\] {
-  --tw-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px;
-  --tw-shadow-colored: 0px 4px 4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-blue-500\/50 {
   --tw-shadow-color: rgb(59 130 246 / 0.5);
   --tw-shadow: var(--tw-shadow-colored);
-}
-
-.hover\:border-teal-700:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(15 118 110 / var(--tw-border-opacity));
 }
 
 .hover\:bg-\[\#2b5a9c\]:hover {
@@ -1311,14 +1300,14 @@ video {
   background-color: rgb(69 143 246 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-teal-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 118 110 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-\[\#fff\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
 .hover\:font-bold:hover {
@@ -1330,19 +1319,14 @@ video {
   color: rgb(46 78 146 / var(--tw-text-opacity));
 }
 
-.hover\:text-\[\#fff\]:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:text-teal-800:hover {
-  --tw-text-opacity: 1;
-  color: rgb(17 94 89 / var(--tw-text-opacity));
-}
-
 .hover\:text-\[\#458ff6\]:hover {
   --tw-text-opacity: 1;
   color: rgb(69 143 246 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#fff\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -1409,6 +1393,10 @@ video {
     height: 4rem;
   }
 
+  .md\:h-\[56px\] {
+    height: 56px;
+  }
+
   .md\:w-48 {
     width: 12rem;
   }
@@ -1421,12 +1409,28 @@ video {
     width: 280px;
   }
 
+  .md\:w-\[510px\] {
+    width: 510px;
+  }
+
+  .md\:w-full {
+    width: 100%;
+  }
+
+  .md\:max-w-lg {
+    max-width: 32rem;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
 
   .md\:flex-wrap {
     flex-wrap: wrap;
+  }
+
+  .md\:items-center {
+    align-items: center;
   }
 
   .md\:justify-between {
@@ -1439,6 +1443,10 @@ video {
 
   .md\:gap-\[260px\] {
     gap: 260px;
+  }
+
+  .md\:border-b-2 {
+    border-bottom-width: 2px;
   }
 
   .md\:pb-12 {
@@ -1463,6 +1471,10 @@ video {
 
   .md\:pb-\[72px\] {
     padding-bottom: 72px;
+  }
+
+  .md\:pl-36 {
+    padding-left: 9rem;
   }
 
   .md\:pt-24 {
@@ -1497,12 +1509,12 @@ video {
     padding-top: 224px;
   }
 
-  .md\:pl-0 {
-    padding-left: 0px;
+  .md\:pb-24 {
+    padding-bottom: 6rem;
   }
 
-  .md\:pl-36 {
-    padding-left: 9rem;
+  .md\:pt-14 {
+    padding-top: 3.5rem;
   }
 
   .md\:text-2xl {
@@ -1515,6 +1527,11 @@ video {
     line-height: 1.75rem;
   }
 
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .md\:transition-all {
     transition-property: all;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1523,6 +1540,14 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:gap-\[260px\] {
+    gap: 260px;
+  }
+
+  .lg\:pl-36 {
+    padding-left: 9rem;
+  }
+
   .lg\:text-\[40px\] {
     font-size: 40px;
   }
