--- a/public/style.css
+++ b/public/style.css
@@ -544,6 +544,11 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+#toggle:checked ~ label div.toggle-dot {
+  --tw-translate-x: 0.75rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .container {
   width: 100%;
   margin-right: auto;
@@ -598,6 +603,14 @@ video {
   top: 6rem;
 }
 
+.right-0 {
+  right: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
 .m-\[auto\] {
   margin: auto;
 }
@@ -605,11 +618,6 @@ video {
 .mx-auto {
   margin-left: 0 auto;
   margin-right: 0 auto;
-}
-
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
 }
 
 .mb-6 {
@@ -624,6 +632,22 @@ video {
   margin-top: 14rem;
 }
 
+.mt-36 {
+  margin-top: 9rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
 .block {
   display: block;
 }
@@ -636,8 +660,20 @@ video {
   display: none;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
 .h-14 {
   height: 3.5rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.h-5 {
+  height: 1.25rem;
 }
 
 .h-6 {
@@ -656,16 +692,20 @@ video {
   height: auto;
 }
 
-.h-3 {
-  height: 0.75rem;
-}
-
 .h-10 {
   height: 2.5rem;
 }
 
-.h-12 {
-  height: 3rem;
+.h-7 {
+  height: 1.75rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
 }
 
 .w-20 {
@@ -676,80 +716,44 @@ video {
   width: 75%;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
 .w-6 {
   width: 1.5rem;
+}
+
+.w-9 {
+  width: 2.25rem;
 }
 
 .w-\[375px\] {
   width: 375px;
 }
 
-.w-\[510px\] {
-  width: 510px;
-}
-
 .w-full {
   width: 100%;
 }
 
-.w-auto {
-  width: auto;
+.w-12 {
+  width: 3rem;
 }
 
-.w-2\/5 {
-  width: 40%;
+.w-10 {
+  width: 2.5rem;
 }
 
-.w-2\/4 {
-  width: 50%;
+.w-5 {
+  width: 1.25rem;
 }
 
-.w-1\/2 {
-  width: 50%;
+.w-7 {
+  width: 1.75rem;
 }
 
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-\[1280px\] {
-  width: 1280px;
-}
-
-.w-\[1340px\] {
-  width: 1340px;
-}
-
-.w-\[2000px\] {
-  width: 2000px;
-}
-
-.w-\[1500px\] {
-  width: 1500px;
-}
-
-.w-\[1600px\] {
-  width: 1600px;
-}
-
-.w-\[1800px\] {
-  width: 1800px;
-}
-
-.w-\[1700px\] {
-  width: 1700px;
-}
-
-.w-\[1650px\] {
-  width: 1650px;
-}
-
-.w-\[1750px\] {
-  width: 1750px;
-}
-
-.w-\[1780px\] {
-  width: 1780px;
+.w-8 {
+  width: 2rem;
 }
 
 .max-w-3xl {
@@ -760,8 +764,8 @@ video {
   max-width: 16rem;
 }
 
-.max-w-7xl {
-  max-width: 80rem;
+.max-w-\[1700px\] {
+  max-width: 1700px;
 }
 
 .max-w-\[380px\] {
@@ -792,12 +796,28 @@ video {
   max-width: 620px;
 }
 
-.max-w-lg {
-  max-width: 32rem;
+.max-w-full {
+  max-width: 100%;
 }
 
-.max-w-\[1700px\] {
-  max-width: 1700px;
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8,0,1,1);
+  }
+
+  50% {
+    transform: none;
+    animation-timing-function: cubic-bezier(0,0,0.2,1);
+  }
+}
+
+.animate-bounce {
+  animation: bounce 1s infinite;
 }
 
 .cursor-pointer {
@@ -810,10 +830,6 @@ video {
           appearance: none;
 }
 
-.flex-row {
-  flex-direction: row;
-}
-
 .flex-col {
   flex-direction: column;
 }
@@ -824,6 +840,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-between {
@@ -842,8 +862,10 @@ video {
   gap: 1rem;
 }
 
-.gap-5 {
-  gap: 1.25rem;
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .rounded-3xl {
@@ -866,20 +888,12 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
 .border {
   border-width: 1px;
 }
 
 .border-\[1\.4px\] {
   border-width: 1.4px;
-}
-
-.border-b-2 {
-  border-bottom-width: 2px;
 }
 
 .border-b {
@@ -915,13 +929,18 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
 .bg-transparent {
   background-color: transparent;
 }
 
-.bg-blue-500 {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-\[linear-gradient\(212deg\2c _\#6888c8_0\%\2c _\#5a98f2_100\%\)\] {
@@ -930,6 +949,54 @@ video {
 
 .bg-\[linear-gradient\(223deg\2c _\#6888c8_0\%\2c _\#5a98f2_100\%\)\] {
   background-image: linear-gradient(223deg, #6888c8 0%, #5a98f2 100%);
+}
+
+.from-blue-400 {
+  --tw-gradient-from: #60a5fa var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(96 165 250 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-400 {
+  --tw-gradient-from: #9ca3af var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(156 163 175 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-100 {
+  --tw-gradient-from: #f3f4f6 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(243 244 246 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-transparent {
+  --tw-gradient-from: transparent var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-blue-50 {
+  --tw-gradient-from: #eff6ff var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(239 246 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-blue-300 {
+  --tw-gradient-from: #93c5fd var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(147 197 253 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-transparent {
+  --tw-gradient-to: transparent var(--tw-gradient-to-position);
+}
+
+.to-blue-50 {
+  --tw-gradient-to: #eff6ff var(--tw-gradient-to-position);
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .p-14 {
@@ -958,26 +1025,6 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
-.px-11 {
-  padding-left: 2.75rem;
-  padding-right: 2.75rem;
-}
-
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .pb-12 {
@@ -1052,6 +1099,10 @@ video {
   padding-top: 6rem;
 }
 
+.pt-7 {
+  padding-top: 1.75rem;
+}
+
 .pt-\[100px\] {
   padding-top: 100px;
 }
@@ -1072,36 +1123,16 @@ video {
   padding-top: 90px;
 }
 
-.pl-20 {
-  padding-left: 5rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-0 {
-  padding-left: 0px;
-}
-
-.pl-36 {
-  padding-left: 9rem;
-}
-
-.pb-7 {
-  padding-bottom: 1.75rem;
-}
-
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-
-.pt-7 {
-  padding-top: 1.75rem;
+.pt-3 {
+  padding-top: 0.75rem;
 }
 
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .font-body {
@@ -1142,6 +1173,11 @@ video {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-xl {
@@ -1258,6 +1294,16 @@ video {
   color: rgb(167 167 167 / var(--tw-text-opacity));
 }
 
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1285,9 +1331,23 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-blue-500\/50 {
   --tw-shadow-color: rgb(59 130 246 / 0.5);
   --tw-shadow: var(--tw-shadow-colored);
+}
+
+.duration-300 {
+  transition-duration: 300ms;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hover\:bg-\[\#2b5a9c\]:hover {
@@ -1303,11 +1363,6 @@ video {
 .hover\:bg-\[\#fff\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-blue-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
 .hover\:font-bold:hover {
@@ -1345,25 +1400,213 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:shadow-sm:hover {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .hover\:shadow-blue-500\/50:hover {
   --tw-shadow-color: rgb(59 130 246 / 0.5);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.hover\:shadow-white:hover {
-  --tw-shadow-color: #fff;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+:is(.dark .dark\:border-white) {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+:is(.dark .dark\:border-\[\#458ff6\]) {
+  --tw-border-opacity: 1;
+  border-color: rgb(69 143 246 / var(--tw-border-opacity));
+}
+
+:is(.dark .dark\:bg-gray-600) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-gray-800) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-white) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-gray-900) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-gray-950) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 7 18 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-\[\#010101\]) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(1 1 1 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-transparent) {
+  background-color: transparent;
+}
+
+:is(.dark .dark\:bg-\[linear-gradient\]) {
+  background-color: linear-gradient;
+}
+
+:is(.dark .dark\:bg-gray-200) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-gray-100) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-\[linear-gradient\(223deg\2c _\#fff_0\%\2c _\#fff_100\%\)\]) {
+  background-image: linear-gradient(223deg, #fff 0%, #fff 100%);
+}
+
+:is(.dark .dark\:bg-\[linear-gradient\(223deg\2c _\#fff_0\%\2c _\#c1c1c1_100\%\)\]) {
+  background-image: linear-gradient(223deg, #fff 0%, #c1c1c1 100%);
+}
+
+:is(.dark .dark\:bg-\[linear-gradient\(223deg\2c _\#fff_0\%\2c _\#1c1c1c_100\%\)\]) {
+  background-image: linear-gradient(223deg, #fff 0%, #1c1c1c 100%);
+}
+
+:is(.dark .dark\:bg-\[linear-gradient\(223deg\2c _\#fff_0\%\2c _\#1c1c1c_0\%\)\]) {
+  background-image: linear-gradient(223deg, #fff 0%, #1c1c1c 0%);
+}
+
+:is(.dark .dark\:bg-gradient-to-r) {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+:is(.dark .dark\:bg-gradient-to-l) {
+  background-image: linear-gradient(to left, var(--tw-gradient-stops));
+}
+
+:is(.dark .dark\:text-\[\#458ff6\]) {
+  --tw-text-opacity: 1;
+  color: rgb(69 143 246 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-gray-100) {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-gray-200) {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-gray-400) {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-white) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-\[458ff6\]) {
+  color: 458ff6;
+}
+
+:is(.dark .dark\:text-\[\#fff\]) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-gray-300) {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:shadow-lg) {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+:is(.dark .dark\:shadow-md) {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+:is(.dark .dark\:shadow-gray-100) {
+  --tw-shadow-color: #f3f4f6;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+:is(.dark .dark\:shadow-gray-200) {
+  --tw-shadow-color: #e5e7eb;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+:is(.dark .dark\:hover\:text-\[458ff6\]:hover) {
+  color: 458ff6;
+}
+
+:is(.dark .dark\:hover\:text-\[\#458ff6\]:hover) {
+  --tw-text-opacity: 1;
+  color: rgb(69 143 246 / var(--tw-text-opacity));
+}
+
+:is(.dark .hover\:dark\:text-\[\#458ff6\]):hover {
+  --tw-text-opacity: 1;
+  color: rgb(69 143 246 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:hover\:shadow-\[0_35px_60px_-15px_rgba\(0\2c 0\2c 0\2c 0\.7\)\]:hover) {
+  --tw-shadow: 0 35px 60px -15px rgba(0,0,0,0.7);
+  --tw-shadow-colored: 0 35px 60px -15px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+:is(.dark .dark\:hover\:shadow-\[0_20px_50px_rgba\(8\2c _112\2c _184\2c _0\.7\)\]:hover) {
+  --tw-shadow: 0 20px 50px rgba(8, 112, 184, 0.7);
+  --tw-shadow-colored: 0 20px 50px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+:is(.dark .dark\:hover\:shadow-\[0_20px_50px_rgba\(255\2c _255\2c _255\2c _0\.7\)\]:hover) {
+  --tw-shadow: 0 20px 50px rgba(255, 255, 255, 0.7);
+  --tw-shadow-colored: 0 20px 50px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+:is(.dark .dark\:hover\:shadow-\[0_20px_50px_rgba\(255\2c _255\2c _255\2c _0\.2\)\]:hover) {
+  --tw-shadow: 0 20px 50px rgba(255, 255, 255, 0.2);
+  --tw-shadow-colored: 0 20px 50px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+:is(.dark .dark\:hover\:shadow-\[0_20px_50px_rgba\(255\2c _255\2c _255\2c _0\.1\)\]:hover) {
+  --tw-shadow: 0 20px 50px rgba(255, 255, 255, 0.1);
+  --tw-shadow-colored: 0 20px 50px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+:is(.dark .dark\:hover\:shadow-\[10px_20px_50px_rgba\(255\2c _255\2c _255\2c _0\.1\)\]:hover) {
+  --tw-shadow: 10px 20px 50px rgba(255, 255, 255, 0.1);
+  --tw-shadow-colored: 10px 20px 50px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+:is(.dark .dark\:hover\:shadow-\[0_50px_50px_rgba\(255\2c _255\2c _255\2c _0\.1\)\]:hover) {
+  --tw-shadow: 0 50px 50px rgba(255, 255, 255, 0.1);
+  --tw-shadow-colored: 0 50px 50px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 @media (min-width: 640px) {
@@ -1383,6 +1626,10 @@ video {
 
   .md\:mb-5 {
     margin-bottom: 1.25rem;
+  }
+
+  .md\:mt-56 {
+    margin-top: 14rem;
   }
 
   .md\:flex {
@@ -1417,6 +1664,10 @@ video {
     width: 100%;
   }
 
+  .md\:w-20 {
+    width: 5rem;
+  }
+
   .md\:max-w-lg {
     max-width: 32rem;
   }
@@ -1441,10 +1692,6 @@ video {
     gap: 3rem;
   }
 
-  .md\:gap-\[260px\] {
-    gap: 260px;
-  }
-
   .md\:border-b-2 {
     border-bottom-width: 2px;
   }
@@ -1453,8 +1700,12 @@ video {
     padding-bottom: 3rem;
   }
 
-  .md\:pb-48 {
-    padding-bottom: 12rem;
+  .md\:pb-24 {
+    padding-bottom: 6rem;
+  }
+
+  .md\:pb-56 {
+    padding-bottom: 14rem;
   }
 
   .md\:pb-\[170px\] {
@@ -1475,6 +1726,10 @@ video {
 
   .md\:pl-36 {
     padding-left: 9rem;
+  }
+
+  .md\:pt-14 {
+    padding-top: 3.5rem;
   }
 
   .md\:pt-24 {
@@ -1509,27 +1764,19 @@ video {
     padding-top: 224px;
   }
 
-  .md\:pb-24 {
-    padding-bottom: 6rem;
-  }
-
-  .md\:pt-14 {
-    padding-top: 3.5rem;
-  }
-
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
   }
 
-  .md\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .md\:transition-all {
@@ -1540,12 +1787,12 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:gap-\[260px\] {
-    gap: 260px;
+  .lg\:block {
+    display: block;
   }
 
-  .lg\:pl-36 {
-    padding-left: 9rem;
+  .lg\:gap-\[260px\] {
+    gap: 260px;
   }
 
   .lg\:text-\[40px\] {
@@ -1554,6 +1801,10 @@ video {
 }
 
 @media (min-width: 1280px) {
+  .xl\:block {
+    display: block;
+  }
+
   .xl\:text-\[48px\] {
     font-size: 48px;
   }
